# Gx64Sync

./: .gitignore  DEV.md  LICENSE  README.md
GSync/: .classpath  .gitignore  (+2 more)
x64Sync/: .gitignore  CMakeLists.txt  CMakePresets.json  Client.cpp  Client.hpp  CommentSync.cpp  CommentSync.hpp  ConfigManager.cpp  ConfigManager.hpp  DebuggerSync.cpp  DebuggerSync.hpp  HyperSync.cpp  HyperSync.hpp  LocationSync.cpp  LocationSync.hpp  Messages.cpp  Messages.hpp  PluginDevHelper.dp32  PluginDevHelper.dp64  SetupDebugEnv.bat  SyncHandler.cpp  SyncHandler.hpp  SyncHandlerTest.cpp  plugin.cpp  pluginmain.cpp  pluginmain.h  x64Sync.sln  x64Sync.vcxproj  x64Sync.vcxproj.filters
x64Sync/Release/: x64Sync.dp32  x64Sync.exp  x64Sync.lib
x64Sync/asio-1.30.2/doc/: index.html
x64Sync/asio-1.30.2/doc/asio/: examples.html  history.html  net_ts.html  overview.html  tutorial.html  using.html
x64Sync/glaze/json/: custom.hpp
x64Sync/pluginsdk/: bridgemain.h  x32bridge.lib  x64bridge.lib  x64dbg.lib
x64Sync/x64/Debug/: x64Sync.dp64  x64Sync.exp  x64Sync.lib
x64Sync/x64/Release/: x64Sync.dp64  x64Sync.exp  x64Sync.lib
x64Sync/x64/Test SyncHandler/: x64Sync.exp  x64Sync.ilk  x64Sync.lib
x64Sync/x64Sync/Release/: x64Sync.dp32.recipe  x64Sync.ipdb
x64Sync/x64Sync/Release/x64Sync.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  x64Sync.lastbuildstate
x64Sync/x64Sync/x64/Debug/: vc143.idb  x64Sync.dp64.recipe
x64Sync/x64Sync/x64/Release/: x64Sync.dp64.recipe  x64Sync.ipdb
(+4750 files in other folders)
